[package]
name = "zcash_client_sqlite"
version = "0.0.0"
authors = [
    "Jack Grigg <jack@z.cash>",
]
edition = "2018"

[dependencies]
bech32 = "0.7"
ff = { path = "../ff" }
protobuf = "2"
rusqlite = { version = "0.20", features = ["bundled"] }
zcash_client_backend = { path = "../zcash_client_backend" }
zcash_primitives = { path = "../zcash_primitives" }

[dev-dependencies]
pairing = { path = "../pairing" }
rand_core = "0.5"
rand_os = "0.2"
tempfile = "3"
